RESOLVED FIXED167792
http/tests/preload/dynamic_removing_preload.html fails to test what it should
https://bugs.webkit.org/show_bug.cgi?id=167792
Summary http/tests/preload/dynamic_removing_preload.html fails to test what it should
Yoav Weiss
Reported 2017-02-03 06:21:56 PST
dynamic_removing_preload is currently not testing what it should. The test didn't turn on the LinkPreload feature before the latter was turned on by default, which meant is was falsely passing. The test's failure is also masked by https://bugs.webkit.org/show_bug.cgi?id=167415. Once that is fixed, the test will start to fail.
Attachments
Patch (7.05 KB, patch)
2017-02-03 19:48 PST, Yoav Weiss
no flags
Archive of layout-test-results from ews116 for mac-elcapitan (2.45 MB, application/zip)
2017-02-04 02:16 PST, Build Bot
no flags
Patch (8.14 KB, patch)
2017-02-06 04:38 PST, Yoav Weiss
no flags
Yoav Weiss
Comment 1 2017-02-03 19:48:35 PST
WebKit Commit Bot
Comment 2 2017-02-04 00:17:05 PST
Attachment 300592 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3 2017-02-04 02:16:28 PST
Comment on attachment 300592 [details] Patch Attachment 300592 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3002668 New failing tests: http/tests/preload/dynamic_removing_preload.html
Build Bot
Comment 4 2017-02-04 02:16:32 PST
Created attachment 300617 [details] Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Yoav Weiss
Comment 5 2017-02-06 04:38:41 PST
Ryosuke Niwa
Comment 6 2017-02-06 14:01:03 PST
Comment on attachment 300708 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=300708&action=review > LayoutTests/TestExpectations:-1048 > -webkit.org/b/167792 http/tests/preload/dynamic_removing_preload.html [ Skip ] Please use - instead of _ for delimiters.
Yoav Weiss
Comment 7 2017-02-06 15:22:40 PST
(In reply to comment #6) > Comment on attachment 300708 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=300708&action=review > > > LayoutTests/TestExpectations:-1048 > > -webkit.org/b/167792 http/tests/preload/dynamic_removing_preload.html [ Skip ] > > Please use - instead of _ for delimiters. I'll change it for this test and all others in a followup patch
Yoav Weiss
Comment 8 2017-02-06 15:23:17 PST
Comment on attachment 300708 [details] Patch Thanks for reviewing! :)
WebKit Commit Bot
Comment 9 2017-02-06 15:49:22 PST
Comment on attachment 300708 [details] Patch Clearing flags on attachment: 300708 Committed r211755: <http://trac.webkit.org/changeset/211755>
WebKit Commit Bot
Comment 10 2017-02-06 15:49:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.