http/tests/preload/dynamic_removing_preload.html fails to test what it should https://bugs.webkit.org/show_bug.cgi?id=167792

Reviewed by Ryosuke Niwa.

Source/WebCore:

Cancel the link preload resource load when the link element is removed from the DOM.

No new tests, but unskipping an existing test: http/tests/preload/dynamic_removing_preload.html

* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::removedFrom): Call m_linkLoader.cancelLoad().
* loader/LinkLoader.cpp:
(WebCore::LinkLoader::cancelLoad): Clear m_preloadResourceClient.
* loader/LinkLoader.h:
* loader/LinkPreloadResourceClients.h:
(WebCore::LinkPreloadResourceClient::clearResource): Call m_resource->cancelLoad().
* loader/SubresourceLoader.cpp:
(WebCore::LinkPreloadResourceClient::didFinishLoading): Change ASSERT to exempt cancelled loads.

LayoutTests:

* TestExpectations: Unskip dynamic_removing_preload.html
* http/tests/preload/dynamic_removing_preload-expected.txt:
* http/tests/preload/dynamic_removing_preload.html: Switch test to use ResourceTiming.


Canonical link: https://commits.webkit.org/184930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211755 268f45cc-cd09-0410-ab3c-d52691b4dbfc